# clawlink

./: Cargo.toml  README.md  config.toml.example  railway.json
.github/workflows/: railway-deploy.yml
clawbridge/: Cargo.toml  README.md
clawbridge/src/: main.rs
clawops/: Cargo.toml  README.md
clawops/src/: config.rs  main.rs
clawrun/: Cargo.toml
clawrun/src/: copilot_sdk.rs  types.rs
crates/clawbridge/: Cargo.toml  Dockerfile  README.md
crates/clawbridge/src/: lib.rs  main.rs
crates/clawops/: clawops.toml.example
crates/clawops/src/: hub.rs  protocol.rs
crates/clawrun/: README.md
crates/clawrun/src/: config.rs  lib.rs  runtime.rs
deploy/: tailscale.md
deploy/launchd/: com.clawlink.gateway.plist
deploy/systemd/: clawlink.service
docs/: session-worker-pool-flow.md
examples/: ws_client.py
src/: config.rs  error.rs  lib.rs  main.rs  protocol.rs  security.rs  ws.rs
src/channels/: mod.rs  qq.rs
tests/: echo_ws.rs
