[package]
name = "clawlink"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1"
axum = { version = "0.8", features = ["ws", "http1", "json"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
ed25519-dalek = "2.1"
futures = "0.3"
governor = "0.8"
nonzero_ext = "0.3"
rand = "0.9"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.12", features = ["v4", "serde"] }

[dev-dependencies]
