[package]
name = "clawbridge"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["http1", "json"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.45", features = ["macros", "rt-multi-thread", "process", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
uuid = { version = "1.12", features = ["v5"] }
